test/expected/explain_fdan_v.out
explain void f(double d, int x[d])
                              ^
31: error: size of array has non-integral type double
